minor CSS changes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <div class="header">
             <h2>Weeks Agenda</h2>
-              <div id="nav1"style="font-size: 24px; display: inline-block; padding-bottom: 30px; color: dark-blue; word-spacing: 50px; text-shadow: none; color: black; margin-bottom: 30px">
+              <div id="nav1" style="font-size: 24px; display: inline-block; padding-bottom: 30px; word-spacing: 50px; text-shadow: none; color: black; margin-bottom: 30px">
                 <a id="a1" href="index.html">About</a>
                 <a id="a1" href="busta.html">Blogs</a>     
                 <a id="a1" href="">Contact</a>
