--- a/busta.html
+++ b/busta.html
@@ -25,10 +25,11 @@
                         <div class="leftcolumn">
                           <div class="card">
                             <h2>IS BUSTA RHYMES A TOP 10 CALIBER MC?</h2>
-                            <h5>Title description, July 7, 2019</h5>
-                            <div class="fakeimg" style="height:200px;">
-                              <img class="busta" src="assets/images/rsz_1maxresdefault.jpg" class="img-fluid" alt="Responsive Image"></div>
-                            <p>Busta Rhymes has been in the game for close to 30 years. Most rappers would love to have his career...hit records, an album(s) deemed by the community as classic(s), worked with some of the best artists/producers in music (Dr. Dre, Janet Jackson, Biggie, etc.), longevity, breaking new talent. However, when most top 10 lists are compiled, Busta is notably absent from these lists. With all his accolades, why is Busta not considered a top 10 talent? I will make the case for why Busta should be considered as a top 10 talent.
+                            <h5>Title description, June 22, 2020</h5>
+                            <div class="fakeimg"> 
+                              <img class="busta" style="border: black solid 2px; float: left; margin-right: 20px; margin-bottom: 15px" src="assets/images/9412e529740d915d62eba93dcd7376cf.jpg" class="img-fluid" alt="Responsive Image"></div>
+
+                              <p> Busta Rhymes has been in the game for close to 30 years. Most rappers would love to have his career...hit records, an album(s) deemed by the community as classic(s), worked with some of the best artists/producers in music (Dr. Dre, Janet Jackson, Biggie, etc.), longevity, breaking new talent. However, when most top 10 lists are compiled, Busta is notably absent from these lists. With all his accolades, why is Busta not considered a top 10 talent? I will make the case for why Busta should be considered as a top 10 talent.
                                 <br>
                                 <br>
                                The career of Busta Rhymes started off with a legendary moment when another rap legend, Chuck D., bestowed upon a young Trevor Smith what would later become his stage name as Busta Rhymes. Busta has been in the game since the early 1990's, when he started off as part of the group, Leaders of the New School. There, he and Charlie battled for the position as the star in the group, with Busta ultimately taking that trophy home. Even before embarking upon his solo career, Busta already had a classic verse (arguably the best verse) on the classic posse cut with A Tribe Called Quest on "Scenario". But when he launched his solo career in the mid 90's, he came with a style and cartoonish brand that was unique in and of itself.  You can trace his style back to guys like Biz Markie and even add a little mix of Reggie Noble. But it was his presentation and delivery that separated him from the pack. NOBODY sounded like Busta Rhymes on The Coming. Busta's dungeon dragon style combined with his cartoonish imagery in his videos separated Busta from virtually every rapper in the game in the mid 90's, who mostly stuck to the mafioso, cocaine-rap sub-genre of hip-hop that defined rap in the mid 90's.
@@ -37,7 +38,7 @@
                                Part of Busta's greatness has been his ability to get on tracks with some of rap's lyrical heavyweights and hold his own. From Biggie to Jay-Z to Nas to Eminem to Redman and so on, Busta has proven that he can go toe to toe with the best of them and, arguably, have the best verse on the record. To be the best, you have to go up against the best. Based on his style, it's easy for Busta to stand out on a posse cut or a track featuring another emcee.    
                                 <br>
                                 <br>
-                            <a href="index.html">Back to main page</a>
+                            <a href="index.html" style="color: black">Back to main page</a>
                             </p>
                           </div>  
                         </div>
