minor css change (border image)

--- a/busta.html
+++ b/busta.html
@@ -27,7 +27,7 @@
                             <h2>IS BUSTA RHYMES A TOP 10 CALIBER MC?</h2>
                             <h5>Title description, June 22, 2020</h5>
                             <div class="fakeimg"> 
-                              <img class="busta" style="height: auto; max-width: 100%; border: black solid 2px; float: left; margin-right: 20px; margin-bottom: 15px" src="assets/images/9412e529740d915d62eba93dcd7376cf.jpg" class="img-fluid" alt="Responsive Image"></div>
+                              <img class="busta" style="height: auto; max-width: 100%; border: black solid 1px; float: left; margin-right: 20px; margin-bottom: 15px" src="assets/images/9412e529740d915d62eba93dcd7376cf.jpg" class="img-fluid" alt="Responsive Image"></div>
 
                               <p> Busta Rhymes has been in the game for close to 30 years. Most rappers would love to have his career...hit records, an album(s) deemed by the community as classic(s), worked with some of the best artists/producers in music (Dr. Dre, Janet Jackson, Biggie, etc.), longevity, breaking new talent. However, when most top 10 lists are compiled, Busta is notably absent from these lists. With all his accolades, why is Busta not considered a top 10 talent? I will make the case for why Busta should be considered as a top 10 talent.
                                 <br>
@@ -46,7 +46,7 @@
                           <div class="card">
                             <h2>About Me</h2>
                             <!-- <div class="aboutimg"> -->
-                              <img class="aboutimg" src="assets/images/rsz_210995827_10202518527803409_4429824122052753281_n.jpg" class="img-fluid" alt="Responsive Image">
+                              <img class="aboutimg" style="border: 1px solid black;" src="assets/images/rsz_210995827_10202518527803409_4429824122052753281_n.jpg" class="img-fluid" alt="Responsive Image">
                             <!-- </div> -->
                             <p>Rather it's sports, hip-hop culture, or movies, Weeks Agenda is here to offer my personal spin on all things pop culture. Let's connect, politic ditto...</p>
                           </div>
