added an additional blog and modified styling somewhat

--- a/busta.html
+++ b/busta.html
@@ -25,7 +25,7 @@
                         <div class="leftcolumn">
                           <div class="card">
                             <h2>IS BUSTA RHYMES A TOP 10 CALIBER MC?</h2>
-                            <h5>Title description, June 22, 2020</h5>
+                            <h5>A Re-Examination of Busta's Career, June 22, 2020</h5>
                             <div class="fakeimg"> 
                               <img class="busta" style="height: auto; max-width: 100%; border: black solid 1px; float: left; margin-right: 20px; margin-bottom: 15px" src="assets/images/9412e529740d915d62eba93dcd7376cf.jpg" class="img-fluid" alt="Responsive Image"></div>
 
