--- a/nas.html
+++ b/nas.html
@@ -27,7 +27,7 @@
                             <h2>IT WAS WRITTEN >>>>> ILLMATIC?</h2>
                             <h5>Truth or Blasphemy, June 22, 2020</h5>
                             <div class="fakeimg"> 
-                              <img class="busta" style="border-radius: 10px; height: auto; max-width: 100%; border: black solid 1px; float: left; margin-right: 20px; margin-bottom: 15px" src="assets/images/rsz_1nas_illmatic-vs-it-was-written-620x593.jpg" class="img-fluid" alt="Responsive Image"></div>
+                              <img class="busta" style="border-radius: 10px; height: auto; max-width: 100%; border: white solid 1px; float: left; margin-right: 20px; margin-bottom: 15px" src="assets/images/rsz_1nas_illmatic-vs-it-was-written-620x593.jpg" class="img-fluid" alt="Responsive Image"></div>
 
                               <p>Illmatic birthed the legend. But it was It Was Written birthed the star. After Nas dropped
                                 arguably the greatest debut in hip-hop history, the big question was what would he do next. As
@@ -122,7 +122,7 @@
                                 are my thoughts. Thus, it was written......
                                 <br>
                                 <br>
-                            <a href="index.html" style="color: black">Back to main page</a>
+                            <a href="index.html" style="color: white">Back to main page</a>
                             </p>
                           </div>  
                         </div>
@@ -130,7 +130,7 @@
                           <div class="card">
                             <h2>About Me</h2>
                             <!-- <div class="aboutimg"> -->
-                              <img class="aboutimg" style="border-radius: 10px; border: 1px solid black;" src="assets/images/rsz_210995827_10202518527803409_4429824122052753281_n.jpg" class="img-fluid" alt="Responsive Image">
+                              <img class="aboutimg" style="border-radius: 10px; border: 1px solid white;" src="assets/images/rsz_210995827_10202518527803409_4429824122052753281_n.jpg" class="img-fluid" alt="Responsive Image">
                             <!-- </div> -->
                             <p>Rather it's sports, hip-hop culture, or movies, Weeks Agenda is here to offer my personal spin on all things pop culture. Let's connect, politic ditto...</p>
                           </div>
