added text hyperlinks on home page

--- a/index.html
+++ b/index.html
@@ -56,18 +56,18 @@
             <div class="leftcolumn">
               <div class="card">
                 <h2>Latest On The Agenda</h2>
-                <h5>Is Busta Rhymes Top 10 Caliber?</h5>
+                <h5 style="font-size: 16px;"><a href="busta.html" style="text-decoration: none; font: arial; color: white;">Is Busta Rhymes Top 10 Caliber?</a></h5>
                 <div class="fakeimg" style="height: auto; color: white; text-align: center; position: relative; width: 100%">
                   <img class="busta" style="border: 1px solid white; border-radius: 10px; height: auto; max-width: 100%;" src="assets/images/rsz_1maxresdefault.jpg" class="img-fluid" alt="Responsive Image">
                   
-                  <h2 style="position: absolute; top: 50px; left: 0; width: 100%; padding-top: 90px; margin-bottom: 20px;"><span style="height: 100px;"><a href="busta.html" style="border-radius: 10px; color: white; height: auto; max-width: 100%; padding: 5px; background-color: rgba(0,0,0,0.5)">Is Busta Rhymes Top 10 Caliber?</a></span></h2>
+                  <h2 style="position: absolute; top: 50px; left: 0; width: 100%; padding-top: 90px; margin-bottom: 20px;"><span style="height: 100px;"><a href="busta.html" style="border-radius: 10px; color: white; height: auto; max-width: 100%; padding: 5px; background-color: rgba(0,0,0,0.5); text-decoration: none;">Is Busta Rhymes Top 10 Caliber?</a></span></h2>
                 </div>
                 <!--<p>Busta Rhymes has been in the game for close to 30 years. Most rappers would love to have his career...hit records, an album(s) deemed by the community as classic(s), worked with some of the best artists/producers in music (Dr. Dre, Janet Jackson, Biggie, etc.), longevity, breaking new talent. However, when most top 10 lists are compiled, Busta is notably absent from these lists. With all his accolades, why is Busta not considered a top 10 talent? <a href="busta.html" style="color: black">Continue on next page...</a></p>-->
-                <h5>It Was Written >>>>> Illmatic?</h5>
+                <h5 style="font-size: 16px; text-decoration: none;"><a href="nas.html" style="text-decoration: none; font: arial; color: white;">It Was Written >>>>> Illmatic?</a></h5>
                 <div class="fakeimg" style="height:auto; color: white; text-align: center; position: relative; width: 100%">
                   <img class="busta" style="border: 1px solid white; border-radius: 10px; height: auto; width: 100%;" src="assets/images/unnamed.jpg" class="img-fluid" alt="Responsive Image">
                   
-                  <h2 style="position: absolute; top: 50px; left: 0; width: 100%; padding-top: 110px; margin-bottom: 20px;"><span style="height: 100px;"><a href="nas.html" style="border-radius: 10px; color: white; height: auto; max-width: 100%; padding: 5px; background-color: rgba(0,0,0,0.5);">IWW >>>>> Illmatic?</a></span></h2>
+                  <h2 style="position: absolute; top: 50px; left: 0; width: 100%; padding-top: 110px; margin-bottom: 20px;"><span style="height: 100px;"><a href="nas.html" style="border-radius: 10px; color: white; height: auto; max-width: 100%; padding: 5px; background-color: rgba(0,0,0,0.5); text-decoration: none;">IWW >>>>> Illmatic?</a></span></h2>
                 </div>
               </div>  
               <!--<div class="card">
