--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <div class="row">
             <div class="leftcolumn">
               <div class="card">
-                <h2>Latest On The Agenda</h2>
+                <h2>LATEST ON THE AGENDA</h2>
                 <h5 style="font-size: 16px;"><a href="busta.html" style="text-decoration: none; font: arial; color: white;">Is Busta Rhymes Top 10 Caliber?</a></h5>
                 <div class="fakeimg" style="height: auto; color: white; text-align: center; position: relative; width: 100%">
                   <img class="busta" style="border: 1px solid white; border-radius: 10px; height: auto; max-width: 100%;" src="assets/images/rsz_1maxresdefault.jpg" class="img-fluid" alt="Responsive Image">
@@ -79,14 +79,14 @@
             </div>
             <div class="rightcolumn">
               <div class="card">
-                <h2>About Me</h2>
+                <h2>ABOUT ME</h2>
                 <!-- <div class="aboutimg"> -->
                   <img class="aboutimg" style="border: 1px solid white; border-radius: 10px;" src="assets/images/rsz_210995827_10202518527803409_4429824122052753281_n.jpg" class="img-fluid" alt="Responsive Image">
                 <!-- </div> -->
                 <p>Rather it's sports, hip-hop culture, or movies, Weeks Agenda is here to offer my personal spin on all things pop culture. Let's connect, politic ditto...</p>
               </div>
               <div class="card">
-                <h3>Popular Post</h3>
+                <h3>POPULAR POST</h3>
                 <div class="fakeimg">Image</div><br>
                 <div class="fakeimg">Image</div><br>
                 <div class="fakeimg">Image</div>
