--- a/nas.html
+++ b/nas.html
@@ -128,14 +128,14 @@
                         </div>
                         <div class="rightcolumn">
                           <div class="card">
-                            <h2>About Me</h2>
+                            <h2>ABOUT ME</h2>
                             <!-- <div class="aboutimg"> -->
                               <img class="aboutimg" style="border-radius: 10px; border: 1px solid white;" src="assets/images/rsz_210995827_10202518527803409_4429824122052753281_n.jpg" class="img-fluid" alt="Responsive Image">
                             <!-- </div> -->
                             <p>Rather it's sports, hip-hop culture, or movies, Weeks Agenda is here to offer my personal spin on all things pop culture. Let's connect, politic ditto...</p>
                           </div>
                           <div class="card">
-                            <h3>Popular Post</h3>
+                            <h3>POPULAR POST</h3>
                             <div class="fakeimg">Image</div><br>
                             <div class="fakeimg">Image</div><br>
                             <div class="fakeimg">Image</div>
