--- a/contact.html
+++ b/contact.html
@@ -48,14 +48,14 @@
                   </div>
                 </div> -->
 
-                <a id="a1" href="contact.html">Contact</a>
+                <a id="a1" href="">Contact</a>
               </div> 
         </div>  
 
           <div class="row">
             <div class="leftcolumn">
               <div class="card">
-                <h2>LATEST ON THE AGENDA</h2>
+                <h2>LET'S CONNECT</h2>
                 <h5 style="font-size: 16px;"><a href="busta.html" style="text-decoration: none; font: arial; color: white;">Is Busta Rhymes Top 10 Caliber?</a></h5>
                 <div class="fakeimg" style="height: auto; color: white; text-align: center; position: relative; width: 100%">
                   <img class="busta" style="border: 1px solid white; border-radius: 10px; height: auto; max-width: 100%;" src="assets/images/rsz_1maxresdefault.jpg" class="img-fluid" alt="Responsive Image">
