--- a/busta.html
+++ b/busta.html
@@ -17,7 +17,7 @@
                       <div id="nav1"style="font-size: 24px; display: inline-block; padding-bottom: 30px; color: dark-blue; word-spacing: 50px; text-shadow: none; color: black; margin-bottom: 30px">
                         <a id="a1" href="index.html">Home</a>
                         <a id="a1" href="busta.html">Blogs</a>     
-                        <a id="a1" href="">Contact</a>
+                        <a id="a1" href="contact.html">Contact</a>
                     </div>
                   </div>
             
@@ -57,7 +57,7 @@
                             <div class="fakeimg">Image</div>
                           </div>
                           <div class="card">
-                            <h3>Follow Me</h3>
+                            <h3>FOLLOW ME</h3>
                             <a href="https://www.facebook.com/jamilw" target="blank"><i class="fa fa-facebook-square" style="font-size:48px; padding-right:70px; color:#3b5998 "></i></a>
                             <a target="blank"><i class="fa fa-twitter-square" style="font-size:48px; padding-right:70px; color:#38A1F3"></i></a>
                             <a target="blank"><i class="fa fa-instagram" style="font-size:48px; color:#E1306C"></i></a>
