--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"> -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" crossorigin="anonymous">
         <link rel="stylesheet" href="assets/css/style.css" type="text/css">
         <script type="javascript/js" href="assets/js/modal.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet">   
@@ -23,30 +23,30 @@
 
                 <!-- <div class="modal fade" id="myModal" style="border: 1px black solid; border-radius: 10px; margin-top: 50px; margin-left: 500px; height: auto; width: 100%;"> -->
                 
-                <!-- <div class="modal fade" id="myModal">
-                
-                  <div class="container-fluid">  
+                <!-- <div class="container-fluid" style="height: auto; width: 100%">
+                 -->
+                  <div class="modal fade" id="myModal">  
                     <div class="modal-dialog modal-sm modal-dialog-centered modal-dialog-scrollable">
-                      <div class="modal-content" style="height: auto; width: 100%"> 
-                        <div class="modal-header" style="padding: 10px">
+                      <div class="modal-content" > 
+                        <div class="modal-header" style="padding: 10px; color: white; background: #99badd; justify-content: center;">
                           Agenda List
                         </div>
                           <br>
                         <div class="modal-body">
-                          <a id="a1" href="busta.html" style="font: Arial; padding: 10px">Busta: Top 10</a>
+                          <a id="a1" href="busta.html" style="font: Arial; padding: 0; font-size: 12px; color: black; word-spacing: none">Busta: Top 10?</a>
                           <br>
                           <br>
-                          <a id="a1" href="nas.html" style="font: Arial; padding: 10px">IWW >>>>> Illmatic</a>
+                          <a id="a1" href="nas.html" style="font: Arial; padding: 0; font-size: 12px; color: black; word-spacing: none">IWW >>>>> Illmatic?</a>
                         </div>
                           <br>
                           <br>
-                        <div class="modal-footer"> 
-                          <button type="button" class="myBtn" data-dismiss="modal" style="padding: 5px; color: white; background: black; border-radius: 10px; font: Arial; margin: 15px">Close</button>
+                        <div class="modal-footer" style="padding: 0; color: white; background: #99badd; justify-content: center;"> 
+                          <button type="button" class="myBtn" data-dismiss="modal" style="padding: 5px; color: white; background: black; border-radius: 10px; font: Arial; margin: 15px;">Close</button>
                         </div>
                       </div>    
                     </div>
                   </div>
-                </div> -->
+                <!-- </div> -->
 
                 <a id="a1" href="contact.html">Contact</a>
               </div> 
@@ -104,8 +104,8 @@
             <h2>&copy;Copyright</h2>
           </div> 
           <script src="https://code.jquery.com/jquery-3.5.1.js"></script> 
-          <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-          <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script> -->
+          <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+          <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     </body>
   
 </html>
