--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
                  -->
                   <div class="modal fade" id="myModal">  
                     <div class="modal-dialog modal-sm modal-dialog-centered modal-dialog-scrollable">
-                      <div class="modal-content" > 
+                      <div class="modal-content" style="border: 1px white solid;"> 
                         <div class="modal-header" style="padding: 10px; color: white; background: #99badd; justify-content: center;">
                           Agenda List
                         </div>
                           <br>
                         <div class="modal-body">
-                          <a id="a1" href="busta.html" style="font: Arial; padding: 0; font-size: 12px; color: black; word-spacing: none">Busta: Top 10?</a>
+                          <a id="a2" href="busta.html" style="font: Arial; padding: 0; color: black; word-spacing: none">Busta: Top 10?</a>
                           <br>
                           <br>
-                          <a id="a1" href="nas.html" style="font: Arial; padding: 0; font-size: 12px; color: black; word-spacing: none">IWW >>>>> Illmatic?</a>
+                          <a id="a2" href="nas.html" style="font: Arial; padding: 0; color: black; word-spacing: none">IWW >>>>> Illmatic?</a>
                         </div>
                           <br>
                           <br>
