--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                  -->
                   <div class="modal fade" id="myModal">  
                     <div class="modal-dialog modal-sm modal-dialog-centered modal-dialog-scrollable">
-                      <div class="modal-content" style="border: 1px white solid;"> 
-                        <div class="modal-header" style="padding: 10px; color: white; background: #99badd; justify-content: center;">
+                      <div class="modal-content" style="border: 1px white solid; background: #99badd;"> 
+                        <div class="modal-header" style="padding: 10px; color: white; background: rgb(19,41,75); justify-content: center;">
                           Agenda List
                         </div>
                           <br>
@@ -40,7 +40,7 @@
                         </div>
                           <br>
                           <br>
-                        <div class="modal-footer" style="padding: 0; color: white; background: #99badd; justify-content: center;"> 
+                        <div class="modal-footer" style="padding: 0; color: white; background: rgb(19,41,75); justify-content: center;"> 
                           <button type="button" class="myBtn" data-dismiss="modal" style="padding: 5px; color: white; background: black; border-radius: 10px; font: Arial; margin: 15px;">Close</button>
                         </div>
                       </div>    
