--- a/busta.html
+++ b/busta.html
@@ -8,6 +8,8 @@
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
             <link rel="stylesheet" href="assets/css/style.css" type="text/css">
             <link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet">
+            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" crossorigin="anonymous">
+            <link rel="stylesheet" href="assets/css/style.css" type="text/css">
             <title>Weeks Agenda</title>
     </head>
 
